# AqualinkD

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS.md  README.md  aqualinkd-config.cmake  aqualinkd.c
data/aqualinkd_player/: CMakeLists.txt
src/: CMakeLists.txt  version.h.in
src/aqualinkd/: CMakeLists.txt  aqualinkd.c  options.c  options.h
src/aqualinkd_player/: CMakeLists.txt
src/libaqualink/: CMakeLists.txt  aq_programmer.c  aq_programmer.h  aq_serial.c  aq_serial.h  aq_serial_statemachine.c  aq_serial_statemachine.h  aqualink.h  aquapure.c  aquapure.h  config.c  config.h  init_buttons.c  json_messages.c  json_messages.h  net_services.c  net_services.h  packetLogger.c  pda.c  pda_aq_programmer.c  pda_aq_programmer.h  pda_menu.c  pentair_messages.c  timespec_subtract.h  utils.c  utils.h  version.h
src/libaqualink/config/: config.c  config.h  config_helpers.c  config_helpers.h  config_parsers.c  config_parsers.h  config_private.c  config_private.h  config_private_defaults.c  config_private_defaults.h  config_validators.c  config_validators.h
src/libaqualink/cross-platform/: daemon.h  process.h  serial.h  signals.h  socket.h  terminal.h  threads.h  time.h
src/libaqualink/cross-platform/linux/: daemon_linux.c  process_linux.c  serial_linux.c  signals_linux.c  socket_linux.c  terminal_linux.c  threads_linux.c  time_linux.c
src/libaqualink/cross-platform/win32/: daemon_win32.c  process_win32.c  serial_win32.c  signals_win32.c  socket_win32.c  terminal_win32.c  threads_win32.c  time_win32.c
src/libaqualink/daemon/: daemon_utils.c  daemon_utils.h
src/libaqualink/hardware/: aqualink_master_controller.c  aqualink_master_controller.h
src/libaqualink/hardware/buttons/: buttons.c  buttons.h  rs_buttons.c  rs_buttons.h
src/libaqualink/hardware/controllers/: controller.c  controller.h  rs_controller.c  rs_controller.h
src/libaqualink/hardware/devices/: hardware_device.c  hardware_device.h  hardware_device_registry.c  hardware_device_registry.h  hardware_device_registry_helpers.c  hardware_device_registry_helpers.h  hardware_device_registry_private.c  hardware_device_registry_private.h  hardware_device_types.c  hardware_device_types.h  hardware_device_utils.c  hardware_device_utils.h  hardware_devices.c  hardware_devices.h
src/libaqualink/hardware/heaters/: heaters.c  heaters.h
src/libaqualink/hardware/simulators/: onetouch_simulator.c  onetouch_simulator.h  pda_simulator.c  pda_simulator.h  rs_keypad_simulator.c  rs_keypadsimulator.c  rs_keypadsimulator.h  simulator_private.c  simulator_private.h  simulator_types.c  simulator_types.h
src/libaqualink/json/: json_messages.c  json_messages.h  json_serializer.c  json_serializer.h  json_string_utils.c  json_string_utils.h
src/libaqualink/logging/: aqualink_default_logger.c  aqualink_default_logger.h  logging.c  logging.h  logging_error_handler.c  logging_error_handler.h  logging_formatter.c  logging_formatter.h  logging_levels.c  logging_levels.h  logging_message.c  logging_message.h  logging_sink.c  logging_sink.h  logging_sink_basic_file.c  logging_sink_basic_file.h  logging_sink_console.c  logging_sink_console.h  logging_sink_console_terminal.c  logging_sink_console_terminal.h  logging_sink_registry.c  logging_sink_registry.h  logging_utils.c  logging_utils.h
src/libaqualink/messages/: aq_serial_message_ack.c  aq_serial_message_ack.h  aq_serial_message_msg_long.c  aq_serial_message_msg_long.h  aq_serial_message_probe.c  aq_serial_message_probe.h  aq_serial_message_status.c  aq_serial_message_status.h  aq_serial_message_unknown.c  aq_serial_message_unknown.h
src/libaqualink/messages/message-bus/: aq_serial_message_bus.c  aq_serial_message_bus.h
src/libaqualink/messages/message-processors/: aq_serial_message_ack_handler.c  aq_serial_message_ack_handler.h  aq_serial_message_msg_long_handler.c  aq_serial_message_msg_long_handler.h  aq_serial_message_probe_handler.c  aq_serial_message_probe_handler.h  aq_serial_message_senders.c  aq_serial_message_senders.h  aq_serial_message_status_handler.c  aq_serial_message_status_handler.h  aq_serial_message_unknown_handler.c  (+1 more)
src/libaqualink/monitor/: monitor.c  monitor.h
src/libaqualink/mqtt/: mqtt_utils.c  mqtt_utils.h
src/libaqualink/profiling/: profiling.c  profiling.h
src/libaqualink/serial/: aq_serial.c  aq_serial.h  aq_serial_checksums.c  aq_serial_checksums.h  aq_serial_data_logger.c  aq_serial_data_logger.h  aq_serial_message_ack.c  aq_serial_message_ack.h  aq_serial_message_probe.c  aq_serial_message_probe.h  aq_serial_message_status.c  aq_serial_message_unknown.c  aq_serial_messages.c  aq_serial_messages.h  aq_serial_reader.c  aq_serial_reader.h  aq_serial_statemachine.c  aq_serial_statemachine.h  aq_serial_threaded.c  aq_serial_threaded.h  aq_serial_types.c  aq_serial_types.h  aq_serial_writer.c  aq_serial_writer.h  aq_serial_writer_queue.c  aq_serial_writer_queue.h
src/libaqualink/simulators/: onetouch_simulator.c  onetouch_simulator.h  pda_simulator.c  rs_keypad_simulator.c  rs_keypad_simulator.h
src/libaqualink/string/: string_utils.c  string_utils.h
src/libaqualink/threads/: thread_utils.c  thread_utils.h
src/libaqualink/utility/: utils.c  utils.h
src/libaqualink/web/: aq_web.c  aq_web.h  aq_web_authentication.c  aq_web_authentication.h  aq_web_connection_handler.c  aq_web_connection_handler.h  aq_web_error_methodnotallowed.c  aq_web_error_methodnotallowed.h  aq_web_error_notfound.c  aq_web_error_notfound.h  aq_web_http_api.c  aq_web_http_api.h  aq_web_page_controller.c  aq_web_page_controller.h  aq_web_page_simple.c  aq_web_page_simple.h  aq_web_threaded.c  aq_web_threaded.h  aq_web_websockets.c  aq_web_websockets.h
src/libaqualinkd/: CMakeLists.txt
src/log_reader/: CMakeLists.txt  log_reader.c  mongoose.h
src/serial_logger/: CMakeLists.txt  options.c  options.h  serial_logger.c
src/serial_logger/playback/: playback_mode.c  playback_mode.h
src/serial_logger/serial-processor/: serial_processor.c  serial_processor.h
test/: CMakeLists.old  CMakeLists.txt  main.c
test/src/: json_tests.cpp  logging_tests.cpp
(+135 files in other folders)
